--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,6 +7,10 @@
         <title>Shoe Fly - {% block title %}{% endblock %}</title>
     </head>
     <body>
+        <div class="jumbotron jumbotron-fluid">
+            <h1 class="display-2">Shoe Fly</h1>
+            <p>Your place for fly shoes</p>
+        </div>
         <div class="container">
             {% block content %}
             {% endblock %}
