--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -7,7 +7,18 @@
     {% if brands is not empty %}
     <ul>
         {% for brand in brands %}
-        <li>{{ brand.getName() }}</li>
+        <li>
+            <div class="row">
+                <div class="col col-10">
+                    {{ brand.getName() }}
+                </div>
+                <div class="col col-2">
+                    <a href="/remove_brand/{{ store.getId() }}/{{ brand.getId() }}">
+                        <img class="deleter" src="/../img/delete.png" alt="delete symbol">
+                    </a>
+                </div>
+            </div>
+        </li>
         {% endfor %}
     </ul>
     {% endif %}
