add front end for patch and delete functionality

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,6 +7,9 @@
         <title>Shoe Fly - {% block title %}{% endblock %}</title>
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-light bg-faded">
+            <a class="navbar-brand ml-auto" href="/">Home</a>
+        </nav>
         <div class="jumbotron jumbotron-fluid">
             <h1 class="display-2">Shoe Fly</h1>
             <p>Your place for fly shoes</p>
