--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,20 +5,35 @@
 {% block content %}
 <div class="row">
     <div class="col col-6">
-        <h3>Stores:</h3>
-        <ul>
-            {% for store in stores %}
-            <a href="/store/{{ store.getId() }}"><li>{{ store.getName() }}</li></a>
-            {% endfor %}
-        </ul>
+        <h3>Brands:</h3>
+        {% for brand in brands %}
+        <div class="row">
+            <div class="col col-10">
+                <a href="/brand/{{ brand.getId() }}">{{ brand.getName() }}</a>
+            </div>
+        </div>
+        {% endfor %}
+        <a href="/brands/delete_all" role="button" class="btn btn-danger">Delete All Brands</a>
     </div>
     <div class="col col-6">
-        <h3>Brands:</h3>
-        <ul>
-            {% for brand in brands %}
-            <a href="/brand/{{ brand.getId() }}"><li>{{ brand.getName() }}</li></a>
-            {% endfor %}
-        </ul>
+        <h3>Stores:</h3>
+        {% for store in stores %}
+        <div class="row">
+            <div class="col col-8">
+                <a href="/store/{{ store.getId() }}">{{ store.getName() }}</a>
+            </div>
+            <div class="col col-1">
+                <a href="/store/ {{ store.getId() }}/edit"><img src="/../img/edit.png" alt="edit icon"></a>
+            </div>
+            <div class="col col-1">
+                <form action="/store/{{ store.getId() }}" method="post">
+                    <input type="hidden" name="_method" value="delete">
+                    <button type="submit"><img src="/../img/delete.png" alt="delete icon"></button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
+        <a href="/stores/delete_all" role="button" class="btn btn-danger">Delete All Stores</a>
     </div>
 </div>
 {% endblock %}
